zeta-code/cli/tests/snapshots/real/02-pages/01-provider-key-input-masked.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
> /config

























─ OpenAI-compatible API key ────────────────────────────────────────────────────────────────────────
The key is hidden and stored in the profile secret store
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ •••••••••••••••••••••••••                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
  Enter save  ·  Esc cancel
