zeta-code/cli/tests/snapshots/real/02-pages/02-theme-open.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
›  /config

•  Saved API key for openai-compatible

›  /statusline

›  /theme





─ Theme ────────────────────────────────────────────────────────────────────────────────────────────

❯ 1. Auto ✓
  2. Dark mode
  3. Light mode
  4. Dark mode (colorblind-friendly)
  5. Light mode (colorblind-friendly)
  6. Dark mode (ANSI colors only)
  7. Light mode (ANSI colors only)
  8. Custom color theme


  ╌╌ Diff preview ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
  1   fn greet(zeta: &str) -> String {
  2  -    format!("Hello, {}!", zeta)
  2  +    format!("Hello, {zeta}!")
  3   }
  ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
  Syntax palette: GitHub Dark
  ↑/↓ select  ·  Enter apply  ·  Esc to close
