zeta-code/cli/tests/snapshots/real/02-pages/03-help-open.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
> /config

● Saved API key for openai-compatible

> /statusline

> /theme

> /theme zeta-code-dark
└─ Theme set to Zeta Code Dark

> /help






─ Help ─────────────────────────────────────────────────────────────────────────────────────────────

   Shortcuts    Commands    Custom commands
  ┌──────────────────────────────────────────────────────────────────────────────────────────────┐
  │ Search help                                                                                  │
  └──────────────────────────────────────────────────────────────────────────────────────────────┘
❯ shift+tab  ·  Cycle approval mode
  ctrl+v  ·  Attach clipboard image
  ctrl+c  ·  Interrupt or quit
  ctrl+d  ·  Interrupt or quit
  ctrl+o  ·  Copy last response
  ctrl+y  ·  Copy last response · custom
  ctrl+z  ·  Suspend Zeta
  Esc Esc  ·  open rewind checkpoints when the input is empty
