zeta-code/cli/tests/snapshots/real/02-pages/04-help-commands.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
> /config

● Saved API key for openai-compatible

> /statusline

> /theme

> /theme zeta-code-dark
└─ Theme set to Zeta Code Dark

> /help


─ Help ─────────────────────────────────────────────────────────────────────────────────────────────

   Shortcuts    Commands    Custom commands
  ┌──────────────────────────────────────────────────────────────────────────────────────────────┐
  │ Search help                                                                                  │
  └──────────────────────────────────────────────────────────────────────────────────────────────┘
❯ /status  ·  show the active session, thread, and model
  /statusline  ·  choose the items shown in the status line
  /skills  ·  browse configured skill sources
  /mcp  ·  list configured MCP tools
  /resume  ·  list or resume a saved session
  /archive  ·  archive the current session and start a new chat
  /connectors  ·  show external service connections
  /rewind  ·  return to an earlier message checkpoint
  /config  ·  show the current configuration
  /add-dir  ·  add or manage a session directory
  /fork  ·  fork the current chat
  /help  ·  show shortcuts and commands
