zeta-code/cli/tests/snapshots/real/02-pages/05-help-custom-commands.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
> /config

● Saved API key for openai-compatible

> /statusline

> /theme

> /theme zeta-code-dark
└─ Theme set to Zeta Code Dark

> /help













─ Help ─────────────────────────────────────────────────────────────────────────────────────────────

   Shortcuts    Commands    Custom commands
  ┌──────────────────────────────────────────────────────────────────────────────────────────────┐
  │ Search help                                                                                  │
  └──────────────────────────────────────────────────────────────────────────────────────────────┘
❯ /compact  ·  Summarize conversation history to free context space
